--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6680,7 +6680,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sum(a,b): \n",
+    "    return a+b"
+   ]
   }
  ],
  "metadata": {
